3/4 done mythos classify.

--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -1562,112 +1562,125 @@ flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 6.6
 [PerilShadowSportsball]
 text={ffg:MYTHOS_EVENT_SHADOW_SPORTSBALL}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
+; rank 1.5
 [PerilReadMe]
 text={ffg:MYTHOS_EVENT_READ_ME}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 2
 [PerilRealHole]
 text={ffg:MYTHOS_EVENT_REAL_HOLE}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 1
 [PerilRedRain01]
 text={ffg:MYTHOS_EVENT_RED_RAIN_01}
 event1=PerilRedRain02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosOutdoors
 
 [PerilRedRain02]
 text={ffg:MYTHOS_EVENT_RED_RAIN_02}
 event1=
 button1="Continue"
 
+; rank 0.35
 [PerilRegrets01]
 text={ffg:MYTHOS_EVENT_REGRETS_01}
 event1=PerilRegrets02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilRegrets02]
 text={ffg:MYTHOS_EVENT_REGRETS_02}
 event1=
 button1="Continue"
 
+; rank 3
 [PerilRepressedMemories]
 text={ffg:MYTHOS_EVENT_REPRESSED_MEMORIES}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank -1.5
 [PerilRevitalized]
 text={ffg:MYTHOS_EVENT_REVITALIZED}
-flags=mythos
+flags=mythosHelp
 event1=
 button1="Continue"
 
+; rank 3.15
 [PerilRopeTrick]
 text={ffg:MYTHOS_EVENT_ROPE_TRICK}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 2
 [PerilRosesRoom]
 text={ffg:MYTHOS_EVENT_ROSES_ROOM}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 3
 [PerilRunMyPretties]
 text={ffg:MYTHOS_EVENT_RUN_MY_PRETTIES}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 6
 [PerilSadMoon]
 text={ffg:MYTHOS_EVENT_SAD_MOON}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
 [PerilScratchingNoise]
 text={ffg:MYTHOS_EVENT_SCRATCHING_NOISE}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 3
 [PerilScurryingInTheDarkness01]
 text={ffg:MYTHOS_EVENT_SCURRYING_IN_THE_DARKNESS_01}
 event1=PerilScurryingInTheDarkness02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosDarkness
 
 [PerilScurryingInTheDarkness02]
 text={ffg:MYTHOS_EVENT_SCURRYING_IN_THE_DARKNESS_02}
 event1=
 button1="Continue"
 
+; rank 9.45
 [PerilSeductiveAmnesia01]
 text={ffg:MYTHOS_EVENT_SEDUCTIVE_AMNESIA_01}
 event1=PerilSeductiveAmnesia02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly
 
 [PerilSeductiveAmnesia02]
 text={ffg:MYTHOS_EVENT_SEDUCTIVE_AMNESIA_02}
@@ -1676,17 +1689,18 @@ button1="Continue"
 
 [PerilShadows]
 text={ffg:MYTHOS_EVENT_SHADOWS}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 1.75
 [PerilShowMeTheWay01]
 text={ffg:MYTHOS_EVENT_SHOW_ME_THE_WAY_01}
 event1=PerilShowMeTheWay02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilShowMeTheWay02]
 text={ffg:MYTHOS_EVENT_SHOW_ME_THE_WAY_02}
@@ -1695,80 +1709,90 @@ button1="Continue"
 
 [PerilSilence]
 text={ffg:MYTHOS_EVENT_SILENCE}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 1.75
 [PerilSinisterRipples01]
 text={ffg:MYTHOS_EVENT_SINISTER_RIPPLES_01}
 event1=PerilSinisterRipples02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosTownSquare
 
 [PerilSinisterRipples02]
 text={ffg:MYTHOS_EVENT_SINISTER_RIPPLES_02}
 event1=
 button1="Continue"
 
+; rank 3.15
 [PerilSinnerMan01]
 text={ffg:MYTHOS_EVENT_SINNER_MAN_01}
 event1=PerilSinnerMan02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor
 
 [PerilSinnerMan02]
 text={ffg:MYTHOS_EVENT_SINNER_MAN_02}
 event1=
 button1="Continue"
 
+; rank 2.5
 [PerilSoCool]
 text={ffg:MYTHOS_EVENT_SO_COOL}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
-[PerilSomeoneShouldSue01]
+; rank 3.45
+[PerilSomeoneShouldSue01Alley]
 text={ffg:MYTHOS_EVENT_SOMEONE_SHOULD_SUE_01}
 event1=PerilSomeoneShouldSue02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosAlley
+
+; rank 3.45
+[PerilSomeoneShouldSue01Street]
+text={ffg:MYTHOS_EVENT_SOMEONE_SHOULD_SUE_01}
+event1=PerilSomeoneShouldSue02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMajor mythosStreet
 
 [PerilSomeoneShouldSue02]
 text={ffg:MYTHOS_EVENT_SOMEONE_SHOULD_SUE_02}
 event1=
 button1="Continue"
 
+; rank 6
 [PerilSpaceRoom01]
 text={ffg:MYTHOS_EVENT_SPACE_ROOM_01}
 event1=PerilSpaceRoom02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosLounge
 
 [PerilSpaceRoom02]
 text={ffg:MYTHOS_EVENT_SPACE_ROOM_02}
 event1=
 button1="Continue"
 
+; rank 1.05
 [PerilStaleAir01]
 text={ffg:MYTHOS_EVENT_STALE_AIR_01}
-event1=PerilStaleAir02
+event1=PerilStaleAir2
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
-
-[PerilStaleAir02]
-text={ffg:MYTHOS_EVENT_STALE_AIR_02}
-event1=
-button1="Continue"
+flags=mythosMinor mythosUnfinished
 
 [PerilStaleAir2]
 text={ffg:MYTHOS_EVENT_STALE_AIR_2}
@@ -1776,128 +1800,147 @@ flags=mythos
 event1=
 button1="Continue"
 
+; rank 3
 [PerilStalkedByShadows]
 text={ffg:MYTHOS_EVENT_STALKED_BY_SHADOWS}
-flags=mythos
+flags=mythosMajor mythosUnfinished
 event1=
 button1="Continue"
 
+; rank 7.35
 [PerilStickyFeet01]
 text={ffg:MYTHOS_EVENT_STICKY_FEET_01}
 event1=PerilStickyFeet02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosIndoors
 
 [PerilStickyFeet02]
 text={ffg:MYTHOS_EVENT_STICKY_FEET_02}
 event1=
 button1="Continue"
 
+; rank 5.6
 [PerilStoneTheWitch01]
 text={ffg:MYTHOS_EVENT_STONE_THE_WITCH_01}
 event1=PerilStoneTheWitch02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosOutdoors
 
 [PerilStoneTheWitch02]
 text={ffg:MYTHOS_EVENT_STONE_THE_WITCH_02}
 event1=
 button1="Continue"
 
+; rank 7.4
 [PerilStrangeBuzzing]
 text={ffg:MYTHOS_EVENT_STRANGE_BUZZING}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
 [PerilStrangeSkies]
 text={ffg:MYTHOS_EVENT_STRANGE_SKIES}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
 [PerilStrangeStars]
 text={ffg:MYTHOS_EVENT_STRANGE_STARS}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
-[PerilStreetsOfAcid01]
+; rank 6
+[PerilStreetsOfAcid01Alley]
 text={ffg:MYTHOS_EVENT_STREETS_OF_ACID_01}
 event1=PerilStreetsOfAcid02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosAlley
+
+; rank 6
+[PerilStreetsOfAcid01Street]
+text={ffg:MYTHOS_EVENT_STREETS_OF_ACID_01}
+event1=PerilStreetsOfAcid02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosDeadly mythosStreet
 
 [PerilStreetsOfAcid02]
 text={ffg:MYTHOS_EVENT_STREETS_OF_ACID_02}
 event1=
 button1="Continue"
 
+; rank 0.5
 [PerilStrongWind01]
 text={ffg:MYTHOS_EVENT_STRONG_WIND_01}
 event1=PerilStrongWind02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilStrongWind02]
 text={ffg:MYTHOS_EVENT_STRONG_WIND_02}
 event1=
 button1="Continue"
 
+; rank 0.5
 [PerilSuddenBlack01]
 text={ffg:MYTHOS_EVENT_SUDDEN_BLACK_01}
 event1=PerilSuddenBlack02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosUnfinished
 
 [PerilSuddenBlack02]
 text={ffg:MYTHOS_EVENT_SUDDEN_BLACK_02}
 event1=
 button1="Continue"
 
+; rank 2.5
 [PerilSuddenHeat01]
 text={ffg:MYTHOS_EVENT_SUDDEN_HEAT_01}
 event1=PerilSuddenHeat02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor
 
 [PerilSuddenHeat02]
 text={ffg:MYTHOS_EVENT_SUDDEN_HEAT_02}
 event1=
 button1="Continue"
 
+; rank 4.5
 [PerilSuddenSpell01]
 text={ffg:MYTHOS_EVENT_SUDDEN_SPELL_01}
 event1=PerilSuddenSpell02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly
 
 [PerilSuddenSpell02]
 text={ffg:MYTHOS_EVENT_SUDDEN_SPELL_02}
 event1=
 button1="Continue"
 
+; rank 3
 [PerilSweetSmoke01]
 text={ffg:MYTHOS_EVENT_SWEET_SMOKE_01}
 event1=PerilSweetSmoke02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor #fire
 
 [PerilSweetSmoke02]
 text={ffg:MYTHOS_EVENT_SWEET_SMOKE_02}
