Mythos events other than MAD23, need to update pool list.

--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -1947,38 +1947,42 @@ text={ffg:MYTHOS_EVENT_SWEET_SMOKE_02}
 event1=
 button1="Continue"
 
+; rank 0.9
 [PerilTetanusShot]
 text={ffg:MYTHOS_EVENT_TETANUS_SHOT}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 2.5
 [PerilTheKeyAndTheGate01]
 text={ffg:MYTHOS_EVENT_THE_KEY_AND_THE_GATE_01}
 event1=PerilTheKeyAndTheGate02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosKey
 
 [PerilTheKeyAndTheGate02]
 text={ffg:MYTHOS_EVENT_THE_KEY_AND_THE_GATE_02}
 event1=
 button1="Continue"
 
+; rank 6
 [PerilTheNthPlague]
 text={ffg:MYTHOS_EVENT_THE_NTH_PLAGUE}
-flags=mythos
+flags=mythosDeadly
 event1=
 button1="Continue"
 
+; rank 3.9
 [PerilTheVoid01]
 text={ffg:MYTHOS_EVENT_THE_VOID_01}
 event1=PerilTheVoid02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosUnfinished
 
 [PerilTheVoid02]
 text={ffg:MYTHOS_EVENT_THE_VOID_02}
@@ -1987,261 +1991,319 @@ button1="Continue"
 
 [PerilThunder]
 text={ffg:MYTHOS_EVENT_THUNDER}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
 [PerilTickTock]
 text={ffg:MYTHOS_EVENT_TICK_TOCK}
-flags=mythos
+flags=mythosFlavor mythosIndoors
 event1=
 button1="Continue"
 
+; rank 3
 [PerilTimeLoop]
 text={ffg:MYTHOS_EVENT_TIME_LOOP}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 0.5
 [PerilTooManyDoors01]
 text={ffg:MYTHOS_EVENT_TOO_MANY_DOORS_01}
 event1=PerilTooManyDoors02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosUnfinished
 
 [PerilTooManyDoors02]
 text={ffg:MYTHOS_EVENT_TOO_MANY_DOORS_02}
 event1=
 button1="Continue"
 
+; rank 0.35
 [PerilTrickBack01]
 text={ffg:MYTHOS_EVENT_TRICK_BACK_01}
 event1=PerilTrickBack02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilTrickBack02]
 text={ffg:MYTHOS_EVENT_TRICK_BACK_02}
 event1=
 button1="Continue"
 
+; rank -1
 [PerilTrip]
 text={ffg:MYTHOS_EVENT_TRIP}
-flags=mythos
+flags=mythosHelp mythosUnfinished
 event1=
 button1="Continue"
 
-[PerilTwistingBeforeYou]
+; rank 3
+[PerilTwistingBeforeYouHall]
 text={ffg:MYTHOS_EVENT_TWISTING_BEFORE_YOU}
-flags=mythos
+flags=mythosMajor mythosHall
 event1=
 button1="Continue"
 
+; rank 3
+[PerilTwistingBeforeYouAlley]
+text={ffg:MYTHOS_EVENT_TWISTING_BEFORE_YOU}
+flags=mythosMajor mythosAlley
+event1=
+button1="Continue"
+
+; rank 3
 [PerilVapor01]
 text={ffg:MYTHOS_EVENT_VAPOR_01}
 event1=PerilVapor02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosUnfinished
 
 [PerilVapor02]
 text={ffg:MYTHOS_EVENT_VAPOR_02}
 event1=
 button1="Continue"
 
+; rank 4.5
 [PerilVeiledEyes01]
 text={ffg:MYTHOS_EVENT_VEILED_EYES_01}
 event1=PerilVeiledEyes02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosUnfinished
 
 [PerilVeiledEyes02]
 text={ffg:MYTHOS_EVENT_VEILED_EYES_02}
 event1=
 button1="Continue"
 
+; rank 2.1
 [PerilVertigo01]
 text={ffg:MYTHOS_EVENT_VERTIGO_01}
 event1=PerilVertigo02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosStairs
 
 [PerilVertigo02]
 text={ffg:MYTHOS_EVENT_VERTIGO_02}
 event1=
 button1="Continue"
 
-[PerilWatchOut01]
+; rank 2
+[PerilWatchOut01Alley]
 text={ffg:MYTHOS_EVENT_WATCH_OUT_01}
 event1=PerilWatchOut02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosAlley
+
+; rank 2
+[PerilWatchOut01Street]
+text={ffg:MYTHOS_EVENT_WATCH_OUT_01}
+event1=PerilWatchOut02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMajor mythosStreet
 
 [PerilWatchOut02]
 text={ffg:MYTHOS_EVENT_WATCH_OUT_02}
 event1=
 button1="Continue"
 
+; rank 2.8
 [PerilWaterboardingIsNotTorture01]
 text={ffg:MYTHOS_EVENT_WATERBOARDING_IS_NOT_TORTURE_01}
 event1=PerilWaterboardingIsNotTorture02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosRiver
 
 [PerilWaterboardingIsNotTorture02]
 text={ffg:MYTHOS_EVENT_WATERBOARDING_IS_NOT_TORTURE_02}
 event1=
 button1="Continue"
 
+; rank 0.25
 [PerilWhammy]
 text={ffg:MYTHOS_EVENT_WHAMMY}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 2.5
 [PerilWhatDidIEat]
 text={ffg:MYTHOS_EVENT_WHAT_DID_I_EAT}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
-[PerilWhatIsForDinner01]
+; rank 0.625
+[PerilWhatIsForDinner01DiningRoom]
 text={ffg:MYTHOS_EVENT_WHAT_IS_FOR_DINNER_01}
 event1=PerilWhatIsForDinner02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosDiningRoom
+
+; rank 0.625
+[PerilWhatIsForDinner01Kitchen]
+text={ffg:MYTHOS_EVENT_WHAT_IS_FOR_DINNER_01}
+event1=PerilWhatIsForDinner02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMinor mythosKitchen
 
 [PerilWhatIsForDinner02]
 text={ffg:MYTHOS_EVENT_WHAT_IS_FOR_DINNER_02}
 event1=
 button1="Continue"
 
-[PerilWhatIsInside01]
+; rank 2.1
+[PerilWhatIsInside01Bedroom]
 text={ffg:MYTHOS_EVENT_WHAT_IS_INSIDE_01}
 event1=PerilWhatIsInside02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosBedroom
+
+; rank 2.1
+[PerilWhatIsInside01Office]
+text={ffg:MYTHOS_EVENT_WHAT_IS_INSIDE_01}
+event1=PerilWhatIsInside02
+button1="Resolve Event"
+event2=
+button2="No Effect"
+flags=mythosMajor mythosOffice
 
 [PerilWhatIsInside02]
 text={ffg:MYTHOS_EVENT_WHAT_IS_INSIDE_02}
 event1=
 button1="Continue"
 
+; rank 2
 [PerilWhereAmI]
 text={ffg:MYTHOS_EVENT_WHERE_AM_I}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 1
 [PerilWhispersInTheDark]
 text={ffg:MYTHOS_EVENT_WHISPERS_IN_THE_DARK}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 1.5
 [PerilWhoIsThere]
 text={ffg:MYTHOS_EVENT_WHO_IS_THERE}
-flags=mythos
+flags=mythosMinor
 event1=
 button1="Continue"
 
+; rank 1.4
 [PerilWhoPutACliffHere01]
 text={ffg:MYTHOS_EVENT_WHO_PUT_A_CLIFF_HERE_01}
 event1=PerilWhoPutACliffHere02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosOutdoors
 
 [PerilWhoPutACliffHere02]
 text={ffg:MYTHOS_EVENT_WHO_PUT_A_CLIFF_HERE_02}
 event1=
 button1="Continue"
 
+; rank 0.625
 [PerilWhoPutAWallHere01]
 text={ffg:MYTHOS_EVENT_WHO_PUT_A_WALL_HERE_01}
 event1=PerilWhoPutAWallHere02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilWhoPutAWallHere02]
 text={ffg:MYTHOS_EVENT_WHO_PUT_A_WALL_HERE_02}
 event1=
 button1="Continue"
 
+; rank 1.2
 [PerilWildDog01]
 text={ffg:MYTHOS_EVENT_WILD_DOG_01}
 event1=PerilWildDog02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosOutdoors
 
 [PerilWildDog02]
 text={ffg:MYTHOS_EVENT_WILD_DOG_02}
 event1=
 button1="Continue"
 
+; rank 3
 [PerilWilhelm]
 text={ffg:MYTHOS_EVENT_WILHELM}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
 [PerilWindHowl]
 text={ffg:MYTHOS_EVENT_WIND_HOWL}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 8.8
 [PerilWormhole01]
 text={ffg:MYTHOS_EVENT_WORMHOLE_01}
 event1=PerilWormhole02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosOutdoors
 
 [PerilWormhole02]
 text={ffg:MYTHOS_EVENT_WORMHOLE_02}
 event1=
 button1="Continue"
 
+; rank 1.5
 [PerilYellowWallpaper01]
 text={ffg:MYTHOS_EVENT_YELLOW_WALLPAPER_01}
 event1=PerilYellowWallpaper02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosUnfinished
 
 [PerilYellowWallpaper02]
 text={ffg:MYTHOS_EVENT_YELLOW_WALLPAPER_02}
 event1=
 button1="Continue"
 
+; rank 3
 [PerilYouDidThis]
 text={ffg:MYTHOS_EVENT_YOU_DID_THIS}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
