Classification done, pool to be updated.

--- a/content/MoM/base/mythos.ini
+++ b/content/MoM/base/mythos.ini
@@ -2309,272 +2309,297 @@ button1="Continue"
 
 [Periloo]
 text={ffg:MYTHOS_EVENT_o_o}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 1.05
 [PerilAnswerTheCall]
 text={ffg:MYTHOS_EVENT_ANSWER_THE_CALL}
-flags=mythos
+flags=mythosMinor #BtT
 event1=
 button1="Continue"
 
+; rank 3
 [PerilAntiques01]
 text={ffg:MYTHOS_EVENT_ANTIQUES_01}
 event1=PerilAntiques02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosStorageRoom
 
 [PerilAntiques02]
 text={ffg:MYTHOS_EVENT_ANTIQUES_02}
 event1=
 button1="Continue"
 
+; rank 2.8
 [PerilBodilyFunctions]
 text={ffg:MYTHOS_EVENT_BODILY_FUNCTIONS}
-flags=mythos
+flags=mythosMajor
 event1=
 button1="Continue"
 
+; rank 2.9
 [PerilButterflies]
 text={ffg:MYTHOS_EVENT_BUTTERFLIES}
-flags=mythos
+flags=mythosMajor #BtT
 event1=
 button1="Continue"
 
+; rank 2.125
 [PerilClaustrophobia01]
 text={ffg:MYTHOS_EVENT_CLAUSTROPHOBIA_01}
 event1=PerilClaustrophobia02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosIndoors
 
 [PerilClaustrophobia02]
 text={ffg:MYTHOS_EVENT_CLAUSTROPHOBIA_02}
 event1=
 button1="Continue"
 
+; rank 4.5
 [PerilCursedMusicBox]
 text={ffg:MYTHOS_EVENT_CURSED_MUSIC_BOX}
-flags=mythos
+flags=mythosDeadly #BtT
 event1=
 button1="Continue"
 
+; rank 5
 [PerilDruggedUp01]
 text={ffg:MYTHOS_EVENT_DRUGGED_UP_01}
 event1=PerilDruggedUp02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly #BtT mythosHallStairs
 
 [PerilDruggedUp02]
 text={ffg:MYTHOS_EVENT_DRUGGED_UP_02}
 event1=
 button1="Continue"
 
+; rank 2.5
 [PerilEscher01]
 text={ffg:MYTHOS_EVENT_ESCHER_01}
 event1=PerilEscher02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosStairs #BtT
 
 [PerilEscher02]
 text={ffg:MYTHOS_EVENT_ESCHER_02}
 event1=
 button1="Continue"
 
+; rank 4
 [PerilEyeballHair01]
 text={ffg:MYTHOS_EVENT_EYEBALL_HAIR_01}
 event1=PerilEyeballHair02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly #BtT
 
 [PerilEyeballHair02]
 text={ffg:MYTHOS_EVENT_EYEBALL_HAIR_02}
 event1=
 button1="Continue"
 
+; rank 3.325
 [PerilGasLeak]
 text={ffg:MYTHOS_EVENT_GAS_LEAK}
-flags=mythos
+flags=mythosMajor #BtT
 event1=
 button1="Continue"
 
+; rank 3.6
 [PerilGeppetto01]
 text={ffg:MYTHOS_EVENT_GEPPETTO_01}
 event1=PerilGeppetto02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosStorageRoom
 
 [PerilGeppetto02]
 text={ffg:MYTHOS_EVENT_GEPPETTO_02}
 event1=
 button1="Continue"
 
+; rank -0.5
 [PerilGhostGossip]
 text={ffg:MYTHOS_EVENT_GHOST_GOSSIP}
-flags=mythos
+flags=mythosHelp #BtT
 event1=
 button1="Continue"
 
 [PerilHeartbeat]
 text={ffg:MYTHOS_EVENT_HEARTBEAT}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 0.375
 [PerilHeyListen01]
 text={ffg:MYTHOS_EVENT_HEY_LISTEN_01}
 event1=PerilHeyListen02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor #BtT
 
 [PerilHeyListen02]
 text={ffg:MYTHOS_EVENT_HEY_LISTEN_02}
 event1=
 button1="Continue"
 
+; rank 3.5
 [PerilHotBlooded]
 text={ffg:MYTHOS_EVENT_HOT_BLOODED}
-flags=mythos
+flags=mythosMajor #BtT
 event1=
 button1="Continue"
 
+; rank 1
 [PerilJunk01]
 text={ffg:MYTHOS_EVENT_JUNK_01}
 event1=PerilJunk02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor
 
 [PerilJunk02]
 text={ffg:MYTHOS_EVENT_JUNK_02}
 event1=
 button1="Continue"
 
+; rank 4.5
 [PerilJunkMountain01]
 text={ffg:MYTHOS_EVENT_JUNK_MOUNTAIN_01}
 event1=PerilJunkMountain02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosStorageRoom
 
 [PerilJunkMountain02]
 text={ffg:MYTHOS_EVENT_JUNK_MOUNTAIN_02}
 event1=
 button1="Continue"
 
+; rank 3.5
 [PerilKillingMachine01]
 text={ffg:MYTHOS_EVENT_KILLING_MACHINE_01}
 event1=PerilKillingMachine02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor #BtT
 
 [PerilKillingMachine02]
 text={ffg:MYTHOS_EVENT_KILLING_MACHINE_02}
 event1=
 button1="Continue"
 
+; rank -2.5
 [PerilMeditation]
 text={ffg:MYTHOS_EVENT_MEDITATION}
-flags=mythos
+flags=mythosHelp
 event1=
 button1="Continue"
 
+; rank -0.5
 [PerilMoonlightRamble01]
 text={ffg:MYTHOS_EVENT_MOONLIGHT_RAMBLE_01}
 event1=PerilMoonlightRamble02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosHelp mythosOutdoors mythosUnfinished
 
 [PerilMoonlightRamble02]
 text={ffg:MYTHOS_EVENT_MOONLIGHT_RAMBLE_02}
 event1=
 button1="Continue"
 
+; rank 1.2
 [PerilNostalgiUhOh01]
 text={ffg:MYTHOS_EVENT_NOSTALGI_UH_OH_01}
 event1=PerilNostalgiUhOh02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosStorageRoom
 
 [PerilNostalgiUhOh02]
 text={ffg:MYTHOS_EVENT_NOSTALGI_UH_OH_02}
 event1=
 button1="Continue"
 
+; rank 6.6
 [PerilOmNom01]
 text={ffg:MYTHOS_EVENT_OM_NOM_01}
 event1=PerilOmNom02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosDeadly mythosIndoors
 
 [PerilOmNom02]
 text={ffg:MYTHOS_EVENT_OM_NOM_02}
 event1=
 button1="Continue"
 
+; rank 1.4
 [PerilPeopleCannotFly01]
 text={ffg:MYTHOS_EVENT_PEOPLE_CANNOT_FLY_01}
 event1=PerilPeopleCannotFly02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMinor mythosStairs
 
 [PerilPeopleCannotFly02]
 text={ffg:MYTHOS_EVENT_PEOPLE_CANNOT_FLY_02}
 event1=
 button1="Continue"
 
+; rank 5.1
 [PerilWhoDoesThat]
 text={ffg:MYTHOS_EVENT_WHO_DOES_THAT}
-flags=mythos
+flags=mythosDeadly #BtT
 event1=
 button1="Continue"
 
+; rank 3.1
 [PerilRichManRage01]
 text={ffg:MYTHOS_EVENT_RICH_MAN_RAGE_01}
 event1=PerilRichManRage02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosIndoors
 
 [PerilRichManRage02]
 text={ffg:MYTHOS_EVENT_RICH_MAN_RAGE_02}
 event1=
 button1="Continue"
 
+; rank 2.05
 [PerilSoulStealing01]
 text={ffg:MYTHOS_EVENT_SOUL_STEALING_01}
 event1=PerilSoulStealing02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor #BtT
 
 [PerilSoulStealing02]
 text={ffg:MYTHOS_EVENT_SOUL_STEALING_02}
@@ -2583,30 +2608,32 @@ button1="Continue"
 
 [PerilVeryDusty]
 text={ffg:MYTHOS_EVENT_VERY_DUSTY}
-flags=mythos
+flags=mythosFlavor
 event1=
 button1="Continue"
 
+; rank 3.15
 [PerilForReasons01]
 text={ffg:MYTHOS_EVENT_FOR_REASONS_01}
 event1=PerilForReasons02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosAtticStorage
 
 [PerilForReasons02]
 text={ffg:MYTHOS_EVENT_FOR_REASONS_02}
 event1=
 button1="Continue"
 
+; rank 2.1
 [PerilWindTunnel01]
 text={ffg:MYTHOS_EVENT_WIND_TUNNEL_01}
 event1=PerilWindTunnel02
 button1="Resolve Event"
 event2=
 button2="No Effect"
-flags=mythos
+flags=mythosMajor mythosHall
 
 [PerilWindTunnel02]
 text={ffg:MYTHOS_EVENT_WIND_TUNNEL_02}
