Zombies can move twice.

--- a/content/MoM/base/activations.ini
+++ b/content/MoM/base/activations.ini
@@ -3104,71 +3104,85 @@ move={ffg:MONSTER_COMMON_MOVE_02}
 ability={ffg:MONSTER_ZOMBIE_MOVE_01}
 master={ffg:MONSTER_ZOMBIE_ATTACK_01}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie02]
 ability={ffg:MONSTER_ZOMBIE_MOVE_02}
 master={ffg:MONSTER_ZOMBIE_ATTACK_02}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie03]
 ability={ffg:MONSTER_ZOMBIE_MOVE_03}
 master={ffg:MONSTER_ZOMBIE_ATTACK_03}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie04]
 ability={ffg:MONSTER_ZOMBIE_MOVE_04}
 master={ffg:MONSTER_ZOMBIE_ATTACK_04}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie05]
 ability={ffg:MONSTER_ZOMBIE_MOVE_05}
 master={ffg:MONSTER_ZOMBIE_ATTACK_05}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie06]
 ability={ffg:MONSTER_ZOMBIE_MOVE_06}
 master={ffg:MONSTER_ZOMBIE_ATTACK_06}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie07]
 ability={ffg:MONSTER_ZOMBIE_MOVE_07}
 master={ffg:MONSTER_ZOMBIE_ATTACK_07}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie08]
 ability={ffg:MONSTER_ZOMBIE_MOVE_08}
 master={ffg:MONSTER_ZOMBIE_ATTACK_08}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie09]
 ability={ffg:MONSTER_ZOMBIE_MOVE_09}
 master={ffg:MONSTER_ZOMBIE_ATTACK_09}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie10]
 ability={ffg:MONSTER_ZOMBIE_MOVE_10}
 master={ffg:MONSTER_ZOMBIE_ATTACK_10}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie11]
 ability={ffg:MONSTER_ZOMBIE_MOVE_11}
 master={ffg:MONSTER_ZOMBIE_ATTACK_11}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie12]
 ability={ffg:MONSTER_ZOMBIE_MOVE_12}
 master={ffg:MONSTER_ZOMBIE_ATTACK_12}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie13]
 ability={ffg:MONSTER_ZOMBIE_MOVE_13}
 master={ffg:MONSTER_ZOMBIE_ATTACK_13}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie14]
 ability={ffg:MONSTER_ZOMBIE_MOVE_14}
 master={ffg:MONSTER_ZOMBIE_ATTACK_14}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie15]
 ability={ffg:MONSTER_ZOMBIE_MOVE_15}
@@ -3180,46 +3194,55 @@ move={ffg:MONSTER_COMMON_MOVE_02}
 ability={ffg:MONSTER_ZOMBIE_MOVE_16}
 master={ffg:MONSTER_ZOMBIE_ATTACK_16}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie17]
 ability={ffg:MONSTER_ZOMBIE_MOVE_17}
 master={ffg:MONSTER_ZOMBIE_ATTACK_17}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie18]
 ability={ffg:MONSTER_ZOMBIE_MOVE_18}
 master={ffg:MONSTER_ZOMBIE_ATTACK_18}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie19]
 ability={ffg:MONSTER_ZOMBIE_MOVE_19}
 master={ffg:MONSTER_ZOMBIE_ATTACK_19}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie20]
 ability={ffg:MONSTER_ZOMBIE_MOVE_20}
 master={ffg:MONSTER_ZOMBIE_ATTACK_20}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie21]
 ability={ffg:MONSTER_ZOMBIE_MOVE_21}
 master={ffg:MONSTER_ZOMBIE_ATTACK_21}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie22]
 ability={ffg:MONSTER_ZOMBIE_MOVE_22}
 master={ffg:MONSTER_ZOMBIE_ATTACK_22}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie23]
 ability={ffg:MONSTER_ZOMBIE_MOVE_23}
 master={ffg:MONSTER_ZOMBIE_ATTACK_23}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationZombie24]
 ability={ffg:MONSTER_ZOMBIE_MOVE_24}
 master={ffg:MONSTER_ZOMBIE_ATTACK_24}
 movebutton={ffg:UI_NOT_IN_RANGE}
+move={ffg:MONSTER_COMMON_MOVE_01}
 
 [MonsterActivationThrall01]
 ability={ffg:MONSTER_THRALL_MOVE_01}
