--- a/content/MoM/base/investigators.ini
+++ b/content/MoM/base/investigators.ini
@@ -1,8 +1,8 @@
-[HeroGloriaGoldberg]
+[HeroRitaYoung]
 ; Optional name for display (if spaces or other formatting required)
-; name="Gloria Goldberg"
+name=Rita Young
 ; image to display
-image="../ffg/img/Circle_Investigator_Gloria_Goldberg.dds"
+image="../ffg/img/Circle_Investigator_Rita_Young.dds"
 ; This will probably need some work to standardise
 traits=female
 ; optional priority, allows content packs to duplicate content and replace items
@@ -16,12 +16,12 @@ traits=female
 [HeroFatherMateo]
 name="Father Mateo"
 image="../ffg/img/Circle_Investigator_Father_Mateo.dds"
-traits=female
+traits=male
 
 [HeroPrestonFairmont]
 name="Preston Fairmont"
 image="../ffg/img/Circle_Investigator_Preston_Fairmont.dds"
-traits=female
+traits=male
 
 [HeroAgathaCrane]
 name="Agatha Crane"
@@ -31,7 +31,7 @@ traits=female
 [HeroCarsonSinclair]
 name="Carson Sinclair"
 image="../ffg/img/Circle_Investigator_Carson_Sinclair.dds"
-traits=female
+traits=male
 
 [HeroWendyAdams]
 name="Wendy Adams"
@@ -41,4 +41,4 @@ traits=female
 [HeroWilliamYorick]
 name="William Yorick"
 image="../ffg/img/Circle_Investigator_William_Yorick.dds"
-traits=female
+traits=male
