Improving trait filtering system.

--- a/content/D2E/base/tiles.ini
+++ b/content/D2E/base/tiles.ini
@@ -490,12 +490,12 @@ reverse=TileSideExtensionA
 top=151
 left=151
 image="../ffg/img/Transition01.dds"
-traits=inside outside
+traits=inside outside transition
 reverse=TileSideTransitionB
 
 [TileSideTransitionB]
 top=151
 left=151
 image="../ffg/img/Transition01.dds"
-traits=inside outside
+traits=inside outside transition
 reverse=TileSideTransitionA
