--- a/content/D2E/boxed/son/tiles.ini
+++ b/content/D2E/boxed/son/tiles.ini
@@ -131,14 +131,14 @@ reverse=TileSide58A
 top=262.5
 left=249.5
 image="../../ffg/img/059A.dds"
-traits=blackrealm city transistion
+traits=blackrealm city transition
 reverse=TileSide59B
 
 [TileSide59B]
 top=262.5
 left=249.5
 image="../../ffg/img/059B.dds"
-traits=blackrealm altar city transistion
+traits=blackrealm altar city transition
 reverse=TileSide59A
 
 [TileSide60A]
@@ -331,7 +331,7 @@ reverse=TileSideExtensionSoNA
 top=75.5
 left=23
 image="../../ffg/img/Transition02.dds"
-traits=city outside transistion
+traits=city outside transition
 reverse=TileSideTransitionSoNB
 
 [TileSideTransitionSoNB]
@@ -345,7 +345,7 @@ reverse=TileSideTransitionSoNA
 top=151
 left=151
 image="../../ffg/img/Transition06.dds"
-traits=city inside transistion
+traits=city inside transition
 reverse=TileSideTransitionSoN2B
 
 [TileSideTransitionSoN2B]
