--- a/content/D2E/boxed/tt/tiles.ini
+++ b/content/D2E/boxed/tt/tiles.ini
@@ -18,7 +18,7 @@ reverse=TileSide43A
 top=197
 left=197
 image="../../ffg/img/044A.dds"
-traits=outside inside transistion
+traits=outside inside transition
 reverse=TileSide44B
 
 [TileSide44B]
