Adding base D2E leiutenants.

--- a/content/D2E/base/ltActivations.ini
+++ b/content/D2E/base/ltActivations.ini
@@ -21,3 +21,123 @@ master={ffg:ELIZA_5_0}
 [MonsterActivationLadyElizaFarrow6]
 ability={ffg:ELIZA_6_EFFECT}
 master={ffg:ELIZA_6_0}
+
+[MonsterActivationLordMerickFarrowFarrow1]
+ability={ffg:MERICK_1_EFFECT}
+master={ffg:MERICK_1_0}
+
+[MonsterActivationLordMerickFarrowFarrow2]
+ability={ffg:MERICK_2_EFFECT}
+master={ffg:MERICK_2_0}
+
+[MonsterActivationLordMerickFarrowFarrow3]
+ability={ffg:MERICK_3_EFFECT}
+master={ffg:MERICK_3_0}
+
+[MonsterActivationLordMerickFarrowFarrow4]
+ability={ffg:MERICK_4_EFFECT}
+master={ffg:MERICK_4_0}
+
+[MonsterActivationLordMerickFarrowFarrow5]
+ability={ffg:MERICK_5_EFFECT}
+master={ffg:MERICK_5_0}
+
+[MonsterActivationLordMerickFarrowFarrow6]
+ability={ffg:MERICK_6_EFFECT}
+master={ffg:MERICK_6_0}
+
+[MonsterActivationSirAlricFarrow1]
+ability={ffg:ALRIC_1_EFFECT}
+master={ffg:ALRIC_1_0_LT}
+
+[MonsterActivationSirAlricFarrow2]
+ability={ffg:ALRIC_2_EFFECT}
+master={ffg:ALRIC_2_0_LT}
+
+[MonsterActivationSirAlricFarrow3]
+ability={ffg:ALRIC_3_EFFECT}
+master={ffg:ALRIC_3_0_LT}
+
+[MonsterActivationSirAlricFarrow4]
+ability={ffg:ALRIC_4_EFFECT}
+master={ffg:ALRIC_4_0_LT}
+
+[MonsterActivationSirAlricFarrow5]
+ability={ffg:ALRIC_5_EFFECT}
+master={ffg:ALRIC_5_0_LT}
+
+[MonsterActivationSirAlricFarrow6]
+ability={ffg:ALRIC_6_EFFECT_LT}
+master={ffg:ALRIC_6_0_LT}
+
+[MonsterActivationBelthir1]
+ability={ffg:BELTHIR_1_EFFECT}
+master={ffg:BELTHIR_1_0}
+
+[MonsterActivationBelthir2]
+ability={ffg:BELTHIR_2_EFFECT}
+master={ffg:BELTHIR_2_0}
+
+[MonsterActivationBelthir3]
+ability={ffg:BELTHIR_3_EFFECT}
+master={ffg:BELTHIR_3_0}
+
+[MonsterActivationBelthir4]
+ability={ffg:BELTHIR_4_EFFECT}
+master={ffg:BELTHIR_4_0}
+
+[MonsterActivationBelthir5]
+ability={ffg:BELTHIR_5_EFFECT}
+master={ffg:BELTHIR_5_0}
+
+[MonsterActivationBelthir6]
+ability={ffg:BELTHIR_6_EFFECT}
+master={ffg:BELTHIR_6_0}
+
+[MonsterActivationSplig1]
+ability={ffg:EFFECT_SPLIG_1}
+master={ffg:SPLIG_1_0}
+
+[MonsterActivationSplig2]
+ability={ffg:EFFECT_SPLIG_2}
+master={ffg:SPLIG_2_0}
+
+[MonsterActivationSplig3]
+ability={ffg:EFFECT_SPLIG_3}
+master={ffg:SPLIG_3_0}
+
+[MonsterActivationSplig4]
+ability={ffg:EFFECT_SPLIG_4}
+master={ffg:SPLIG_4_0}
+
+[MonsterActivationSplig5]
+ability={ffg:EFFECT_SPLIG_5}
+master={ffg:SPLIG_5_0}
+
+[MonsterActivationSplig6]
+ability={ffg:EFFECT_SPLIG_6}
+master={ffg:SPLIG_6_0}
+
+[MonsterActivationMonsterBaronZachareth1]
+ability={ffg:ZACHARETH_1_EFFECT}
+master={ffg:ZACHARETH_1_0}
+
+[MonsterActivationMonsterBaronZachareth2]
+ability={ffg:ZACHARETH_2_EFFECT}
+master={ffg:ZACHARETH_2_0}
+
+[MonsterActivationMonsterBaronZachareth3]
+ability={ffg:ZACHARETH_3_EFFECT}
+master={ffg:ZACHARETH_3_0}
+
+[MonsterActivationMonsterBaronZachareth4]
+ability={ffg:ZACHARETH_4_EFFECT}
+master={ffg:ZACHARETH_4_0}
+
+[MonsterActivationMonsterBaronZachareth5]
+ability={ffg:ZACHARETH_5_EFFECT}
+master={ffg:ZACHARETH_5_0}
+
+[MonsterActivationMonsterBaronZachareth6]
+ability={ffg:ZACHARETH_6_EFFECT}
+master={ffg:ZACHARETH_6_0}
