Adding conversion kit content to MoM base.

--- a/content/MoM/base/content_pack.ini
+++ b/content/MoM/base/content_pack.ini
@@ -9,8 +9,14 @@ description=Base Game, required to play
 ; names are cosmetic, data can be anywhere
 [ContentPackData]
 investigators.ini
+investigators1E.ini
+investigatorsCotW.ini
+investigatorsFA.ini
 tiles.ini
 monsters.ini
+monsters1E.ini
+monstersCotW.ini
+monstersFA.ini
 activations.ini
 tokens.ini
 horror.ini
