Updating D2E Perils to new system.

--- a/content/D2E/base/perils.ini
+++ b/content/D2E/base/perils.ini
@@ -2,25 +2,28 @@
 
 [PerilMinor22H]
 text={ffg:PERIL_MINOR_2_RULES_2HERO}
-flags=#2hero
+vars=#heroes,==,2 perilMinor,=,0
 
 [PerilMinor23H]
 text={ffg:PERIL_MINOR_2_RULES_3HERO}
-flags=#3hero
+vars=#heroes,==,3 perilMinor,=,0
 
 [PerilMinor24H]
 text={ffg:PERIL_MINOR_2_RULES_4HERO}
-flags=#4hero
+vars=#heroes,==,4 perilMinor,=,0
 
 [PerilMinor3]
 text={ffg:PERIL_MINOR_3_RULES}
+vars=perilMinor,=,0
 
 [PerilMinor4]
 text={ffg:PERIL_MINOR_4_RULES}
+vars=perilMinor,=,0
 ; fixme PERIL_MINOR_4_TIMER?
 
 [PerilMinor5]
 text={ffg:PERIL_MINOR_5_RULES}
+vars=perilMinor,=,0
 ; fixme PERIL_MINOR_5_TIMER?
 
 ; There is no minor6??
@@ -38,14 +41,16 @@ text={ffg:PERIL_MINOR_5_RULES}
 ; I don't think this is actually in the game?
 [PerilMinor13]
 text={ffg:PERIL_MINOR_13_RULES:{0}:{rnd:hero}}
+vars=perilMinor,=,0
 
 [PerilMajor1]
 text={ffg:PERIL_MAJOR_1_RULES}
-flags=#monsters
+vars=#monsters,>,0 perilMajor,=,0
 
 ; replace {0} with damage (how much?)
 [PerilMajor2]
 text={ffg:PERIL_MAJOR_2_RULES:{0}:{rnd:2:4}}
+vars=perilMajor,=,0
 
 ; 1 is random? monster
 ;[PerilMajor3]
@@ -53,6 +58,7 @@ text={ffg:PERIL_MAJOR_2_RULES:{0}:{rnd:2:4}}
 
 [PerilMajor4]
 text={ffg:PERIL_MAJOR_4_RULES}
+vars=perilMajor,=,0
 
 ; PERIL_MAJOR_5_ENDRND not used?
 ; add goblins
@@ -73,6 +79,7 @@ text={ffg:PERIL_MAJOR_4_RULES}
 
 [PerilMajor9]
 text={ffg:PERIL_MAJOR_9_RULES}
+vars=perilMajor,=,0
 
 ; I don't know?
 ;PERIL_MAJOR_10_RULES,"[u]Major Peril: Blood for Blood[/u]\n\n[i]An elderly figure watches from the darkness, flitting from shadow to shadow. Time and time again, just as you forget he is there, he screams out: ""Blood for blood, blood for blood!""[/i]\n\n"
@@ -82,19 +89,45 @@ text={ffg:PERIL_MAJOR_9_RULES}
 
 [PerilMajor11]
 text={ffg:PERIL_MAJOR_11_RULES}
+vars=perilMajor,=,0
 
 ; 0 to damage (maybe 7?)
 [PerilDeadly1]
 text={ffg:PERIL_DEADLY_1_RULES:{0}:{rnd:7:7}}
+vars=perilDeadly,=,0
 
 [PerilDeadly2]
 text={ffg:PERIL_DEADLY_2_RULES}
-; RtL doesn't actually do this!
-delayedevents=1:PERIL_DEADLY_2_2 2:PERIL_DEADLY_2_END
+vars=perilDeadly,=,0 perilDeadly2Count,=,1 
 
 [PerilD22]
 text={ffg:PERIL_DEADLY_2_2}
+vars=perilDeadly2Count,==,1 perilDeadly2Count,=,2
+trigger=EndRound
 
 ; Should we force end here? RtL doesn't
 [PerilD2End]
 text={ffg:PERIL_DEADLY_2_END}
+vars=perilDeadly2Count,==,2
+trigger=EndRound
+
+[PerilMinorPool]
+event1=PerilMinor22H PerilMinor23H  PerilMinor24H PerilMinor3 PerilMinor4 PerilMinor5 PerilMinor13
+button1="Continue"
+randomevents=true
+vars=perilMinor,>,0
+trigger=EndRound
+
+[PerilMajorPool]
+event1=PerilMajor1 PerilMajor2 PerilMajor4 PerilMajor9 PerilMajor11
+button1="Continue"
+randomevents=true
+vars=perilMajor,>,0
+trigger=EndRound
+
+[PerilDeadlyPool]
+event1=PerilDeadly1 PerilDeadly2
+button1="Continue"
+randomevents=true
+vars=perilDeadly,>,0
+trigger=EndRound
