Adding an attack classification to all monsters.

--- a/content/MoM/base/monsters.ini
+++ b/content/MoM/base/monsters.ini
@@ -21,6 +21,7 @@ image="../ffg/img/Monster_DeepOne.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=beast
 
 [MonsterDeepOneHybrid]
 ; Optional name for display (if spaces or other formatting required)
@@ -32,6 +33,7 @@ image="../ffg/img/Monster_DeepOneHybrid.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterGhost]
 ; Optional name for display (if spaces or other formatting required)
@@ -67,6 +69,7 @@ image="../ffg/img/Monster_Riot.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterStarSpawn]
 ; Optional name for display (if spaces or other formatting required)
@@ -90,6 +93,7 @@ image="../ffg/img/Monster_ChildOfDagon.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterHybridLeader]
 ; Optional name for display (if spaces or other formatting required)
@@ -101,6 +105,7 @@ image="../ffg/img/Monster_HybridLeader.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=humanoid
 
 [MonsterPriestOfDagon]
 ; Optional name for display (if spaces or other formatting required)
