--- a/content/MoM/fa/monsters.ini
+++ b/content/MoM/fa/monsters.ini
@@ -8,6 +8,7 @@ image="../ffg/img/Monster_Byakhee.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=beast
 
 [MonsterCrawlingOne]
 ; Optional name for display (if spaces or other formatting required)
@@ -19,3 +20,4 @@ image="../ffg/img/Monster_CrawlingOne.dds"
 ; activation=
 ; Optional health modifier from number of players
 ; health=0
+traits=beast
