--- a/content/MoM/btt/items.ini
+++ b/content/MoM/btt/items.ini
@@ -1,36 +1,44 @@
-
 [ItemCommon25Automatic]
 name={ffg:COMMON_ITEM_25_AUTOMATIC}
 image=../ffg/img/CommonItem_25_Automatic.dds
+traits=weapon firearm
 
 [ItemCommonBlackjack]
 name={ffg:COMMON_ITEM_BLACKJACK}
 image=../ffg/img/CommonItem_Blackjack.dds
+traits=weapon heavyweapon
 
 [ItemCommonEnchantedBlade]
 name={ffg:COMMON_ITEM_ENCHANTED_BLADE}
 image=../ffg/img/CommonItem_EnchantedBlade.dds
+traits=weapon bladedweapon
 
 [ItemCommonFineClothes]
 name={ffg:COMMON_ITEM_FINE_CLOTHES}
 image=../ffg/img/CommonItem_FineClothes.dds
+traits=equipment
 
 [ItemCommonScribesJournal]
 name={ffg:COMMON_ITEM_SCRIBES_JOURNAL}
 image=../ffg/img/CommonItem_ScribesJournal.dds
+traits=tome
 
 [ItemCommonRazor]
 name={ffg:COMMON_ITEM_RAZOR}
 image=../ffg/img/CommonItem_Razor.dds
+traits=weapon bladedweapon
 
 [ItemCommonTomeOfHorrors]
 name={ffg:COMMON_ITEM_TOME_OF_HORRORS}
 image=../ffg/img/CommonItem_TomeOfHorrors.dds
+traits=equipment
 
 [ItemCommonTomeOfSecrets]
 name={ffg:COMMON_ITEM_TOME_OF_SECRETS}
 image=../ffg/img/CommonItem_TomeOfSecrets.dds
+traits=tome
 
 [ItemUniqueCultistsJournal]
 name={ffg:UNIQUE_ITEM_CULTISTS_JOURNAL}
 image=../ffg/img/UniqueItem_CultistsJournal.dds
+traits=evidence tome
